Fix collaborative title and hack link

--- a/source/_data/contentful/spaces/cases.yaml
+++ b/source/_data/contentful/spaces/cases.yaml
@@ -3617,7 +3617,7 @@ datacollaborative:
     its website.
 - sys:
     id: 1bk0TUxrzMqYu4i4igWekY
-  caseStudy: BBVA- Measuring people's economic resilience to natural disasters
+  caseStudy: BBVA - Measuring People's Economic Resilience To Natural Disasters
   sector:
   - Economic Development
   - Crisis Response
